# trpl-m

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: auto-release-on-version-bump.yml  build_and_publish.yml  release.yml  workflow.yml
src/: main.py  styles.tcss
src/trplm/: __main__.py  trplm.py
