[tool.poetry]
name = "trpl-m"
version = "1.0.0"
description = "Mental math game in your terminal"
authors = ["Grant Achuzia <achuziaduby@gmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = ">=3.6"
rich = ">=13.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[tool.poetry.scripts]
trpl_m = "trpl_m.main:Trplm"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
